# asset-importer-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  sonar-project.properties
.devcontainer/: devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_template.md  ergonomic_template.md  feature_template.md
.github/workflows/: README.md  benchmark.yml  cargo.yml  core.yml  coverage.yml  dep-gltf-v1-json.yml  dep-gltf-v1.yml  format-gltf-v1.yml  format-gltf.yml  format-obj.yml  gltf-v1-derive.yml  gltf2.yml  post-process.yml  rust.yml  scene.yml  semver.yml  sonar.yml  test.yml  tests.yml
benches/: benchmark.rs
crates/asset-importer-rs-core/: Cargo.toml  README.md
crates/asset-importer-rs-core/src/: config.rs  error.rs  export.rs  exporter.rs  import.rs  importer.rs  importer_desc.rs  lib.rs  metadata.rs  post_process.rs  spatial.rs
crates/asset-importer-rs-gltf/: Cargo.toml  README.md
crates/asset-importer-rs-gltf-v1/: Cargo.toml  README.md
crates/asset-importer-rs-gltf-v1/src/: README.md  gltf_asset.rs  gltf_importer.rs  gltf_importer_camera.rs  gltf_importer_light.rs  gltf_importer_material.rs  gltf_importer_mesh.rs  gltf_importer_node.rs  gltf_importer_texture.rs  lib.rs
crates/asset-importer-rs-gltf-v1/src/exporter/: anim.rs  error.rs  material.rs  mesh.rs  mod.rs  node.rs
crates/asset-importer-rs-gltf-v1/src/importer/: camera.rs  error.rs  light.rs  material.rs  mesh.rs  mod.rs  node.rs  texture.rs
crates/asset-importer-rs-gltf/src/: gltf2_exporter.rs  gltf2_exporter_animation.rs  gltf2_exporter_camera.rs  gltf2_exporter_material.rs  gltf2_exporter_mesh.rs  gltf2_exporter_node.rs  gltf2_importer.rs  gltf2_importer_animation.rs  gltf2_importer_camera.rs  gltf2_importer_light.rs  gltf2_importer_material.rs  gltf2_importer_mesh.rs  gltf2_importer_metadata.rs  gltf2_importer_node.rs  gltf2_importer_texture.rs  lib.rs
crates/asset-importer-rs-gltf/src/exporter/: animation.rs  camera.rs  error.rs  exporter.rs  material.rs  mesh.rs  mod.rs  node.rs
crates/asset-importer-rs-gltf/src/importer/: animation.rs  camera.rs  error.rs  importer.rs  light.rs  material.rs  mesh.rs  metadata.rs  mod.rs  node.rs  texture.rs
crates/asset-importer-rs-obj/: Cargo.toml  README.md
crates/asset-importer-rs-obj/src/: lib.rs
crates/asset-importer-rs-obj/src/importer/: error.rs  material.rs  mesh.rs  mod.rs
crates/asset-importer-rs-obj/tests/: importer.rs
crates/asset-importer-rs-post-process/: Cargo.toml  README.md
crates/asset-importer-rs-post-process/src/: error.rs  helper.rs  lib.rs
crates/asset-importer-rs-post-process/src/steps/: calc_tangent_spaces.rs  debone.rs  drop_normals.rs  embed_textures.rs  find_degenerates.rs  find_instances.rs  find_invalid_data.rs  fix_infacing_normals.rs  flip_uvs.rs  flip_winding_order.rs  force_gen_normals.rs  gen_bounding_boxes.rs  gen_normals.rs  gen_smooth_normals.rs  gen_uv_coords.rs  global_scale.rs  improve_cache_locality.rs  join_identical_vertices.rs  limit_bone_weights.rs  make_left_handed.rs  mod.rs  optimize_graph.rs  optimize_meshes.rs  populate_armature_data.rs  pre_transform_vertices.rs  remove_component.rs  remove_redundant_materials.rs  sort_by_p_type.rs  split_by_bone_count.rs  split_large_meshes.rs  transform_uv_coords.rs  triangulate.rs  validate_data_structure.rs
crates/asset-importer-rs-scene/: Cargo.toml  README.md
crates/asset-importer-rs-scene/src/: animation.rs  camera.rs  color.rs  lib.rs  material.rs  matrix.rs  metadata.rs  quaternion.rs  scene.rs  texture.rs  type_def.rs  vector.rs
crates/fbx-dom/: Cargo.toml  README.md  SPEC.md
crates/fbx-dom/src/: document.rs  global.rs  lib.rs  loader.rs
crates/fbxscii/: Cargo.toml  README.md
crates/fbxscii/assets/: duck.fbx
crates/fbxscii/src/: lib.rs  parser.rs  tokenizer.rs  tokenizer23.rs
crates/fbxscii/tests/: load.rs
crates/gltf-v1/: Cargo.toml  README.md
crates/gltf-v1-derive/: Cargo.toml  README.md
crates/gltf-v1-derive/src/: lib.rs
crates/gltf-v1-json/: Cargo.toml  README.md
crates/gltf-v1-json/src/: accessor.rs  animation.rs  asset.rs  buffer.rs  camera.rs  common.rs  gltf.rs  image.rs  material.rs  mesh.rs  node.rs  path.rs  scene.rs  shader.rs  skin.rs  texture.rs  validation.rs
crates/gltf-v1-json/src/extensions/: gltf.rs  image.rs  light.rs  material.rs  node.rs
crates/gltf-v1/src/: accessor.rs  binary.rs  buffer.rs  camera.rs  document.rs  error.rs  gltf.rs  image.rs  import.rs  light.rs  material.rs  math.rs  mesh.rs  node.rs  scene.rs  skin.rs  texture.rs
dev/bench/: data.js
gltf-v1/: Cargo.toml
gltf-v1-derive/: Cargo.toml
gltf-v1-json/: Cargo.toml  LICENSE
gltf-v1-json/src/: accessor.rs  animation.rs  asset.rs  buffer.rs  camera.rs  gltf.rs  image.rs  lib.rs  material.rs  mesh.rs  node.rs  root.rs  scene.rs  shader.rs  skin.rs  texture.rs  validation.rs
gltf-v1-json/src/extensions/: gltf.rs  image.rs  light.rs  material.rs  mod.rs
gltf-v1/src/: accessor.rs  animation.rs  binary.rs  buffer.rs  camera.rs  document.rs  error.rs  image.rs  import.rs  lib.rs  light.rs  math.rs  mesh.rs  scene.rs  texture.rs
src/: error.rs  exporter.rs  importer.rs  lib.rs  wrapper.rs
src/core/: config.rs  error.rs  export.rs  import.rs  importer.rs  importer_desc.rs  mod.rs  post_process.rs
src/formats/: mod.rs
src/formats/gltf/: common.rs  error.rs  gltf_asset.rs  gltf_importer.rs  gltf_importer_camera.rs  gltf_importer_light.rs  gltf_importer_material.rs  gltf_importer_mesh.rs  gltf_importer_node.rs  gltf_importer_texture.rs  mod.rs
src/structs/: README.md  aabb.rs  animation.rs  camera.rs  color.rs  error.rs  light.rs  material.rs  matrix.rs  mesh.rs  metadata.rs  mod.rs  quaternion.rs  scene.rs  texture.rs  type_def.rs  types.rs  vector.rs
test/model/: Avocado2.glb
tests/: gltf2_exporter_integration_tests.rs  gltf2_importer_integration_tests.rs  gltf2_importer_sample_asset_test.rs  gltf2_integration.rs  gltf_exporter_integration_tests.rs  gltf_importer_integration_tests.rs  gltf_integration.rs  import_sample_models.rs  importer_tests.rs  obj_integration.rs
(+29 files in other folders)
