[package]
name = "asset-importer-rs"
version = "1.0.0"
edition = "2021"
description = "Assimp, but in Rust"
license = "MIT OR Apache-2.0"
authors = ["Jackson Levitt <jackel1020@gmail.com>"]
repository = "https://github.com/crazyjackel/asset-importer-rs"

[dependencies]
base64 = "0.13"
bytemuck = { version = "1.21.0", features = ["derive"] }
enumflags2 = "0.7.10"
gltf = { version = "1.4.1", optional = true }
gltf-v1 = { path = "gltf-v1", optional = true, version = "0.1.0" }
image = { version = "0.25.5", features = [
    "png",
    "jpeg",
    "webp",
], default-features = false }
num_enum = "0.7.3"
urlencoding = "2.1"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.134"

[dev-dependencies]
criterion = "*"

[lib]
bench = false

[[bench]]
name = "benchmark"
harness = false

[features]
minimal = ["gltf_minimal","gltf2_minimal"]

default = ["gltf_default", "gltf2_default"]

extras = ["gltf_extras", "gltf2_extras", "double_precision"]

#Assimp Core Feature Flags 
double_precision = []

# GLTF 1.0 Feature Flags
gltf = ["dep:gltf-v1"]

gltf_minimal = ["gltf"]
gltf_default = ["gltf", "gltf_KHR_materials_common"]
gltf_extras = ["gltf", "gltf_KHR_materials_common"]

gltf_KHR_materials_common = ["gltf-v1/KHR_materials_common"]

# GLTF 2.0 Feature Flags
gltf2 = ["dep:gltf"]

gltf2_minimal = ["gltf2"]

gltf2_default = [
    "gltf2",
    "gltf2_guess_mime_type",
    "gltf2_extensions",
    "gltf2_KHR_texture_transform",
    "gltf2_KHR_materials_unlit",
    "gltf2_KHR_materials_transmission",
    "gltf2_KHR_materials_ior",
    "gltf2_KHR_materials_volume",
    "gltf2_KHR_materials_specular",
    "gltf2_KHR_materials_pbrSpecularGlossiness",
    "gltf2_KHR_materials_emissive_strength",
    "gltf2_KHR_lights_punctual",
]

gltf2_extras = [
    "gltf2",
    "gltf2_extensions",
    "gltf2_KHR_texture_transform",
    "gltf2_KHR_materials_unlit",
    "gltf2_KHR_materials_transmission",
    "gltf2_KHR_materials_ior",
    "gltf2_KHR_materials_volume",
    "gltf2_KHR_materials_specular",
    "gltf2_KHR_materials_pbrSpecularGlossiness",
    "gltf2_KHR_materials_emissive_strength",
    "gltf2_KHR_lights_punctual",
]

gltf2_extensions = ["gltf/extensions"]
gltf2_KHR_texture_transform = ["gltf/KHR_texture_transform"]
gltf2_KHR_materials_unlit = ["gltf/KHR_materials_unlit"]
gltf2_KHR_materials_transmission = ["gltf/KHR_materials_transmission"]
gltf2_KHR_materials_ior = ["gltf/KHR_materials_ior"]
gltf2_KHR_materials_volume = ["gltf/KHR_materials_volume"]
gltf2_KHR_materials_specular = ["gltf/KHR_materials_specular"]
gltf2_KHR_materials_pbrSpecularGlossiness = [
    "gltf/KHR_materials_pbrSpecularGlossiness",
]
gltf2_KHR_materials_emissive_strength = ["gltf/KHR_materials_emissive_strength"]
gltf2_KHR_lights_punctual = ["gltf/KHR_lights_punctual"]
gltf2_guess_mime_type = ["gltf/guess_mime_type"]