[package]
name = "asset-importer-rs"
version = "0.1.0"
edition = "2024"
description = "Assimp, but in Rust"
license = "MIT OR Apache-2.0"
authors = ["Jackson Levitt <jackel1020@gmail.com>"]
repository = "https://github.com/crazyjackel/asset-importer-rs"

[workspace]
resolver = "2"
members = [
    "crates/asset-importer-rs-core",
    "crates/gltf-v1",
    "crates/gltf-v1-derive",
    "crates/gltf-v1-json",
    "crates/asset-importer-rs-scene",
    "crates/asset-importer-rs-core",
    "crates/asset-importer-rs-gltf",
    "crates/asset-importer-rs-gltf-v1",
]

[workspace.package]
version = "0.1.0"
authors = ["Jackson Levitt <jackel1020@gmail.com>"]
edition = "2024"

[workspace.dependencies]
asset-importer-rs-core = { path = "crates/asset-importer-rs-core" }
asset-importer-rs-scene = { path = "crates/asset-importer-rs-scene" }
asset-importer-rs-gltf = { path = "crates/asset-importer-rs-gltf" }
asset-importer-rs-gltf-v1 = { path = "crates/asset-importer-rs-gltf-v1" }
base64 = "0.13"
bytemuck = { version = "1.21.0", features = ["derive"] }
byteorder = "1.3"
enumflags2 = "0.7.10"
gltf = { version = "1.4.1" }
gltf-v1 = { path = "crates/gltf-v1" }
gltf-v1-derive = { path = "crates/gltf-v1-derive" }
gltf-v1-json = { path = "crates/gltf-v1-json" }
image = { version = "0.25.5", features = [
    "png",
    "jpeg",
    "webp",
], default-features = false }
indexmap = "2.7.1"
inflections = "1.1"
num_enum = "0.7.3"
urlencoding = "2.1"
proc-macro2 = "1"
quote = "1"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.134"
syn = "2"

[workspace.lints.clippy]
all = "warn"

[dependencies]
asset-importer-rs-core = { path = "crates/asset-importer-rs-core" }
asset-importer-rs-scene = { path = "crates/asset-importer-rs-scene" }
asset-importer-rs-gltf = { path = "crates/asset-importer-rs-gltf", optional = true, default-features = false}
asset-importer-rs-gltf-v1 = { path = "crates/asset-importer-rs-gltf-v1", optional = true, default-features = false}

[dev-dependencies]
criterion = "*"
asset-importer-rs-gltf = { path = "crates/asset-importer-rs-gltf" }
asset-importer-rs-gltf-v1 = { path = "crates/asset-importer-rs-gltf-v1" }

[features]
default = ["gltf", "gltf2", "gltf-default", "gltf2-default"]
minimal = ["gltf", "gltf2"]
gltf = ["dep:asset-importer-rs-gltf-v1"]
gltf-default = ["asset-importer-rs-gltf-v1/default"]
gltf2 = ["dep:asset-importer-rs-gltf"]
gltf2-default = ["asset-importer-rs-gltf/default"]

[[bench]]
name = "benchmark"
harness = false
