[package]
name = "gltf-v1-json"
version = "0.1.0"
edition = "2021"
description = "JSON Package for GLTF Spec 1.0"
license = "MIT OR Apache-2.0"
authors = ["Jackson Levitt <jackel1020@gmail.com>"]
repository = "https://github.com/crazyjackel/asset-importer-rs"

[dependencies]
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.134"