[package]
name = "asset-importer-rs-gltf-v1"
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}
description = "GLTF V1 module for asset-importer-rs"
license = {workspace = true}
repository = {workspace = true}
documentation = "https://docs.rs/asset-importer-rs-gltf-v1"

[dependencies]
asset-importer-rs-core = {workspace = true}
asset-importer-rs-scene = {workspace = true}
gltf-v1 = {workspace = true}
serde_json = {workspace = true}
bytemuck = {workspace = true}
enumflags2 = {workspace = true}
base64 = {workspace = true}

[features]
default = ["KHR_materials_common"]
KHR_materials_common = ["gltf-v1/KHR_materials_common"]