[package]
name = "gltf-v1-json"
version = {workspace = true}
edition = {workspace = true}
description = "JSON Package for GLTF Spec 1.0"
license = {workspace = true}
authors = {workspace = true}
repository = {workspace = true}
documentation = "https://docs.rs/gltf-v1-json"

[dependencies]
indexmap = { workspace = true, features = ["serde"]}
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
gltf-v1-derive = { workspace = true }

[features]
default = []
extensions = []
extras = []
KHR_binary_glTF = []
KHR_materials_common = []