[package]
name = "gltf-v1"
version = "0.1.0"
edition = "2021"
description = "GLTF Spec 1.0"
license = "MIT OR Apache-2.0"
authors = ["Jackson Levitt <jackel1020@gmail.com>"]
repository = "https://github.com/crazyjackel/asset-importer-rs"

[dependencies]
base64 = { workspace = true }
byteorder = { workspace = true }
urlencoding = { workspace = true }
indexmap = { workspace = true, features = ["serde"]}
gltf-v1-json = { workspace = true }

[dependencies.image]
default-features = false
features = ["jpeg", "png", "bmp", "gif"]
version ="0.25.5"

[features]
default = ["KHR_binary_glTF"]
KHR_binary_glTF = ["gltf-v1-json/KHR_binary_glTF"]
KHR_materials_common = ["gltf-v1-json/KHR_materials_common"]
