[package]
name = "gltf-v1"
version = {workspace = true}
edition = {workspace = true}
description = "GLTF Spec 1.0"
license = {workspace = true}
authors = {workspace = true}
repository = "https://github.com/crazyjackel/asset-importer-rs"
documentation = "https://docs.rs/gltf-v1"

[dependencies]
base64 = { workspace = true }
byteorder = { workspace = true }
urlencoding = { workspace = true }
indexmap = { workspace = true, features = ["serde"]}
gltf-v1-json = { workspace = true }

[dependencies.image]
default-features = false
features = ["jpeg", "png", "bmp", "gif"]
version ="0.25.5"

[features]
default = ["KHR_binary_glTF"]
KHR_binary_glTF = ["gltf-v1-json/KHR_binary_glTF"]
KHR_materials_common = ["gltf-v1-json/KHR_materials_common"]
